--- a/app/assets/stylesheets/_new3.scss
+++ b/app/assets/stylesheets/_new3.scss
@@ -55,12 +55,12 @@
     background-color: #ffffff;
     margin: 0 auto;
     &-title {
-      height: 63px;
+      // height: 63px;
       font-weight: 600;
       font-size: 22px;
       padding: 32px;
       text-align: center;
-      line-height: 63px;
+      // line-height: 63px;
       border-bottom: 1px solid #f5f5f5;
     }
     &-box {
@@ -188,7 +188,7 @@
       
     }
     &-image {
-      width: 185px;
+      width: 68px;
       margin: 0 auto;
       margin-top:40px;
       a:hover {
