--- a/app/views/mercaris/new2.html.haml
+++ b/app/views/mercaris/new2.html.haml
@@ -24,9 +24,9 @@
         携帯電話の番号
       .new2__form-box-form
         =form_with do |f|
-          =f.text_field :phone, placeholder: "携帯電話の番号を入力"
+          =f.text_field :phone, placeholder: "携帯電話の番号を入力", class: "new2__form-box-form-a"
           本人確認のため、携帯電話のSMS(ショートメッセージサービス)を利用して認証を行います。
-          =f.submit "SMSを送信する"
+          =f.submit "SMSを送信する", class: "new2__form-box-form-b"
           ※電話番号は本人確認や不正利用防止のために利用します。他のユーザーに公開されることはありません。
       .new2__form-box-link
         =link_to "電話番号の確認が必要な理由>", "https://www.mercari.com/jp/help_center/article/244/"
@@ -39,7 +39,7 @@
       .new2__footer-links-title
         =link_to "特定商取引に関する表記", "https://www.mercari.com/jp/tokutei/"
     .new2__footer-image
-      = link_to image_tag(src="fmarket_logo_white.svg"),root_path
+      = link_to image_tag(src="logo_white.svg"),root_path
     .new2__footer-end
       © Mercari, Inc.
 
