--- a/app/views/mercaris/new3.html.haml
+++ b/app/views/mercaris/new3.html.haml
@@ -82,7 +82,7 @@
       .new3__footer-links-title
         =link_to "特定商取引に関する表記", "https://www.mercari.com/jp/tokutei/"
     .new3__footer-image
-      = link_to image_tag(src="fmarket_logo_white.svg"),root_path
+      = link_to image_tag(src="logo_white.svg"),root_path
     .new3__footer-end
       © Mercari, Inc.
 
