--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,8 @@
-@import "./posts";
-@import "font-awesome";
-@import "./header";
-@import "./footer";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
+@import "./new";
+@import "./header";
+@import "./footer";
 @import "./reset";
 @import "./index";
 @import "./new4";
@@ -11,3 +10,4 @@
 @import "./new3";
 @import "./new5";
 @import "./show";
+@import "./new1";
