--- a/app/assets/stylesheets/new1.scss
+++ b/app/assets/stylesheets/new1.scss
@@ -47,7 +47,7 @@
 
   &_body{
     width: 700px;
-    height: 1400px;
+    height: 1300px;
     background-color:white;
     margin: 0 auto;
       
@@ -91,12 +91,11 @@
             }
 
           &-mail{
-            height: 140px;
+            height: 70px;
             &-1{
               display: flex;
               &-title{
                 padding-top: 40px;
-                padding-left: 120px;
               }
               &-hissu{
                 width: 40px;
@@ -108,21 +107,15 @@
                 border-radius: 5px;
                 font-size: 15px;
               }
-            }
-            &-field{
-              padding-top: 10px;
-              padding-left: 120px;
-              height: 50px;
             }
           }
           
           &-pass{
-            height: 140px;
+            height: 70px;
             &-1{
               display: flex;
               &-title{
                 padding-top: 40px;
-                padding-left: 120px;
               }
               &-hissu{
                 width: 40px;
@@ -135,21 +128,15 @@
                 font-size: 15px;
               }
             }
-            &-field{
-              padding-top: 10px;
-              padding-left: 120px;
-              height: 50px;
-            }
+            
             &-message{
               display: flex;
-              padding-left: 120px;
             }
           }
 
           &-kakunin{
             height: 120px;
             width: 300px;
-            margin-left: 120px;
             margin-top: 40px;
             &-title{
               font-size: 20px;
@@ -160,12 +147,11 @@
           }
 
           &-name{
-            height: 140px;
+            height: 70px;
             &-1{
               display: flex;
               &-title{
                 padding-top: 40px;
-                padding-left: 120px;
               }
               &-hissu{
                 width: 40px;
@@ -178,23 +164,14 @@
                 font-size: 15px;
               }
             }
-            &-field{
-              display: flex;
-              padding-left: 120px;
-              &-1{
-                padding-right: 10px;
-              }
-            }
-            
             }
           
           &-kananame{
-            height: 140px;
+            height: 70px;
             &-1{
               display: flex;
               &-title{
                 padding-top: 40px;
-                padding-left: 120px;
               }
               &-hissu{
                 width: 40px;
@@ -207,22 +184,15 @@
                 font-size: 15px;
               }
             }
-            &-field{
-              display: flex;
-              padding-left: 120px;
-              &-1{
-                padding-right: 10px;
-              }
-            }
+            
           }
 
           &-birth{
-            height: 140px;
+            height: 70px;
             &-1{
               display: flex;
               &-title{
                 padding-top: 40px;
-                padding-left: 120px;
               }
               &-hissu{
                 width: 40px;
@@ -235,33 +205,11 @@
                 font-size: 15px;
               }
             }
-            &-field{
-              display: flex;
-              padding-left: 120px;
-              &-year{
-                display: flex;
-                &-font{
-                  line-height: 46px;
-                }
-              }
-              &-month{
-                display: flex;
-                &-font{
-                  line-height: 46px;
-                }
-              }
-              &-day{
-                display: flex;
-                &-font{
-                  line-height: 46px;
-                }
-              }
-            }
+            
           }
 
           &-attention{
             width: 300px;
-            margin-left: 120px;
             font-size: 13px;
             color:  #888;
           }
@@ -269,27 +217,16 @@
           &-riyoukiyaku{
             padding-top: 10px;
             display: flex;
-            padding-left: 100px;
+            padding-left: 20px;
           }
           &-riyoukiyaku-3{
-            padding-left: 200px;
+            padding-left: 80px;
           }
 
-          &-next{
-            width: 350px;
-            height: 50px;
-            background:#ea352d;
-            color: #fff;
-            margin-top: 40px;
-            text-align: center;
-            font-size: 20px;
-            margin-left: 120px;
-            line-height: 50px;
-          }
           
           &-details{
             padding-top: 30px;
-            padding-left: 300px;
+            padding-left: 220px;
           }
         }
 
@@ -334,5 +271,27 @@
 // 入力欄
 
 input[type="text"] {
+  height: 40px;
+}
+
+.new1-btn {
+  width: 350px;
+  height: 50px;
+  background:#ea352d;
+  color: #fff;
+  margin-top: 40px;
+  text-align: center;
+  font-size: 20px;
+  margin-left: 40px;
+  line-height: 50px;
+}
+
+.year{
+  height: 40px;
+}
+.month{
+  height: 40px;
+}
+.day{
   height: 40px;
 }
