--- a/app/views/mercaris/_header.html.haml
+++ b/app/views/mercaris/_header.html.haml
@@ -23,6 +23,6 @@
             ブランドから探す
       %ul.header__box__lower-box__right-box
         %li
-          = link_to "新規会員登録", root_path, class: "header__box__lower-box__right-box__btn new"
+          = link_to "新規会員登録", new_mercari_path, class: "header__box__lower-box__right-box__btn new"
         %li
           = link_to "ログイン", root_path, class:"header__box__lower-box__right-box__btn login"
