--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -111,7 +111,7 @@
           line-height: 30px;
         }
         .new {
-          // display: block;
+          padding: 8px 10px;
           background-color: rgb(234, 53, 45);
           border: 1px solid rgb(234, 53, 45);
           color: white;
