--- a/app/views/mercaris/credit.html.haml
+++ b/app/views/mercaris/credit.html.haml
@@ -9,7 +9,7 @@
         クレジットカード一覧
       .main00-credit-content-bottun
         =form_with do |f|
-          =f.button "クレジットカードを追加する", class: "credit_btn", onclick: "location.href='credit2'"
+          =f.button "クレジットカードを追加する", class: "credit_btn", onclick: "location.href='credit_touroku'"
     .main00-credit-link
       =link_to "支払い方法について","https://www.mercari.com/jp/help_center/category/6/"
   .main00__Exhibition
