ログアウト画面　作成

--- a/app/views/mercaris/_sidebar.html.haml
+++ b/app/views/mercaris/_sidebar.html.haml
@@ -35,4 +35,4 @@
           .sidebar_contents2-5
           =f.button "本人情報", class: "sidebar_btn", onclick: "location.href='aaa'"
           .sidebar_contents2-6
-          =f.button "ログアウト", class: "sidebar_btn", onclick: "location.href='aaa'"
+          =f.button "ログアウト", class: "sidebar_btn", onclick: "location.href='logout'"
