ハッシュロケット　訂正

--- a/app/views/mercaris/credit.html.haml
+++ b/app/views/mercaris/credit.html.haml
@@ -1,6 +1,6 @@
-= render :partial => "header"
+= render partial: "header"
 .main00
-  = render :partial => "sidebar"
+  = render partial: "sidebar"
   .main00-credit
     .main00-credit-title
       支払い方法
@@ -21,4 +21,4 @@
         =link_to icon('fas', 'camera', class: "main__Exhibition-image-logo-camera"),root_path
 
 .space
-= render :partial => "footer"
+= render partial: "footer"
