--- a/app/views/mercaris/logout.html.haml
+++ b/app/views/mercaris/logout.html.haml
@@ -1,6 +1,6 @@
-= render :partial => "header"
+= render partial: "header"
 .main-logout
-  = render :partial => "sidebar"
+  = render partial: "sidebar"
   .main-logout-content
     .main-logout-content-bottun
       =form_with do |f|
@@ -12,4 +12,4 @@
         出品
       .main-logout__Exhibition-image-logo
         =link_to icon('fas', 'camera', class: "main__Exhibition-image-logo-camera"),root_path
-= render :partial => "footer"
+= render partial: "footer"
