本人確認ページ　ビュー

--- a/app/views/mercaris/_sidebar.html.haml
+++ b/app/views/mercaris/_sidebar.html.haml
@@ -33,6 +33,6 @@
           .sidebar_contents2-4
           =f.button "メール・パスワード", class: "sidebar_btn", onclick: "location.href='aaa'"
           .sidebar_contents2-5
-          =f.button "本人情報", class: "sidebar_btn", onclick: "location.href='aaa'"
+          =f.button "本人情報", class: "sidebar_btn", onclick: "location.href='register_user_data'"
           .sidebar_contents2-6
           =f.button "ログアウト", class: "sidebar_btn", onclick: "location.href='logout'"
