ファイル名　変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,13 +5,13 @@
 @import "./footer";
 @import "./reset";
 @import "./index";
-@import "./new4_credit";
-@import "./new2_phone";
-@import "./new3_address";
-@import "./new5_last";
+@import "./new4";
+@import "./new2";
+@import "./new3";
+@import "./new5";
 @import "./exhibition";
 @import "./show";
-@import "./new1_data";
+@import "./new1";
 @import "./buy";
 @import "./sidebar";
 @import "./credit";
