--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -86,6 +86,7 @@
   &__categories {
     display: flex;
     justify-content: center;
+    padding-bottom: 100px;
     &-box {
       width: 1000px;
       height: 100%;
@@ -120,30 +121,39 @@
         height: 100%;
         display: flex;
         flex-wrap:wrap;
+        a {
+          text-decoration: none;
+          color: black;
+        }
         &-image {
           width: 185px;
           height: 260px;
           background-color: rgb(239, 239, 239);
           margin: 15px 15px 15px  0;
           box-shadow: 2px 2px 2px rgba(0,0,0,0.4);
+          
           &-area {
             position: relative;
             width: 185px;
-            height: 193px;
-            &-image {
-              width: 100%;
-              height: 100%;
+            height: 191px;
+            img {
+              width: 185px;
+              height: 191px;
+              object-fit: cover;
+              // width: 100%;
+              // height: 100%;
             }
             &-price {
+              padding-left: 5px;
               align-items: center;
               color: #ffffff;
               background-color: black;
               opacity: 0.5;
-              width: 70px;
+              width: 90px;
               font-size: 17px;
-              border-radius: 0 10px 10px 0/ 0 10px 10px 0;
+              border-radius: 0 15px 15px 0/ 0 15px 15px 0;
               position: absolute;
-              top: 140px;
+              top: 155px;
             }
           }
           &-catch {
@@ -161,8 +171,8 @@
   &__Exhibition {
     display: flex;
     &-image {
-      width: 200px;
-      height: 200px;
+      width: 170px;
+      height: 170px;
       background-color: red;
       border-radius: 150px;
       float: right;
@@ -175,13 +185,12 @@
         text-align: center;
         color: #ffffff;
         font-size: 22px;
-        padding-top: 40px;
+        padding-top: 30px;
       }
       &-logo {
         &-camera {
           font-size: 75px;
-          margin-left: 62px;
-          margin-top: 20px;
+          margin-left: 47px;
           color: #ffffff;
         }
       }
