商品一覧表示修正1

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -46,6 +46,8 @@
                     = item.price
                   .main__categories-box-area-image-catch
                     = item.description
+
+        -# 手打ちの仮データのため残しておく　↓
         -# .main__categories-box-area-image
         -#   .main__categories-box-area-image-area
         -#     = link_to image_tag(src= "himawari.jpg",class: "main__categories-box-area-image-area-image"),root_path
@@ -183,9 +185,11 @@
   -#           .main__categories-box-area-image-area-price
   -#             ¥5,000
   -#         .main__categories-box-area-image-catch
+  -# 手打ちの仮データのため残しておく　↑
+
+
   .main__Exhibition
     .main__Exhibition-image
-      -# =link_to root_path, class: "main__Exhibition-link"
       .main__Exhibition-image-text
         出品
       .main__Exhibition-image-logo
