出品未完成

--- a/app/assets/stylesheets/_exhibition.scss
+++ b/app/assets/stylesheets/_exhibition.scss
@@ -137,7 +137,25 @@ main {
   padding: 40px;
   border-top: 1px solid #eee;
 }
-
+.listing-default--require {
+  margin: 40px 0 0;
+}
+.listing-select-wrapper__box--select {
+  height: 48px;
+  margin: 5px 0 5px 0;
+  padding-left:10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  line-height: 48px;
+  cursor: pointer;
+}
+.listing-select-wrapper__box {
+  position: relative;
+  .listing-select-wrapper__box--arrow-down{
+    position: absolute;
+  }
+}
 .form__group {
   margin: 40px 0 0;
   &:first-child {
@@ -332,6 +350,15 @@ label {
   color: #fff;
   font-size: 12px;
   vertical-align: top;
+}
+.listing-default--require {
+  background: #ea352d;
+  margin: 0 0 0 8px;
+  padding: 2px 4px;
+  border-radius: 2px;
+  color: #fff;
+  font-size: 12px;
+  vertical-align: top
 }
 .form__question {
   display: inline-block;
