--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -16,9 +16,9 @@
                   %span.form--require 必須
                 %p 最大10枚までアップロードできます
                 = f.fields_for :images do |i|
-                  = i.label :image1, class: "sell--upload__drop__box" do
+                  = i.label :image, class: "sell--upload__drop__box" do
                     .sell--upload__drop__box__imageview
-                      = i.file_field :image1,class:"file",style:"display:none;"
+                      = i.file_field :image,class:"file",style:"display:none;"
                       %pre
                         #preview
                           ドラッグドラッグアンドドロップ
@@ -39,25 +39,82 @@
                 %h3.sell--sub__head 商品の詳細
                 .sell__form__box
                   .form__group
+                    -# %label
+                      -# カテゴリー
+                      -# %span.form--require 必須
+                    -# %div
+                    -# .select--wrap
+                      -# - @parents.each do |parent|
+                      -#   =parent.category_name
+                      -# = f.fields_for :category do |i|
+                      -# -#   = i.select :category_name, [["レディース",1],["メンズ",2],["ベビー・キッズ",3],["インテリア・住まい・小物",4],["本・音楽・ゲーム",5],["おもちゃ・ホビー・グッズ",6],["コスメ・香水・美容",7],["家電・スマホ・カメラ",8],["スポーツ・レジャー",9],["ハンドメイド",10],["チケット",11],["自動車・オートバイ",12],["その他",13]],{prompt: '---'}
+                      -# = f.fields_for :category do |i|
+                      -# = f.select :category_id, Item.x_categories.keys.to_a, {prompt: '---'}
+                      -# = f.collection_select(:category_id, Category.all, :id, :name)
+                      -# = f.select :category, @category_parent_array, {}, {class: 'listing-select-wrapper__box--select', id: 'parent_category'}
+
+                      -# #children_wrapper.listing-select-wrapper__added>
+                      -#   .listing-select-wrapper__box
+                      -#   %select#child_category.listing-select-wrapper__box--select{:name => "category_id"}
+                      -#     %option{"data-category" => "---", :value => "---"} ---
+                         
+                      -#     %select
+                      -#       %i.fas.fa-chevron-down.listing-select-wrapper__box--arrow-down
+
+                    .listing-form-box
+                      .listing-product-detail__category
+                        = f.label 'カテゴリー', class: 'listing-default__label'
+                        %span.listing-default--require 必須
+                        .listing-select-wrapper
+                          .listing-select-wrapper__box
+                          
+                            -# = f.select :category_id, @category_parent_array, {}, {class: 'listing-select-wrapper__box--select', id: 'parent_category'}
+                            = f.collection_select :category_id, @category_parent_array, :id, :name, {prompt: "---"}, {class: 'listing-select-wrapper__box--select', id: 'parent_category'}
+                            -# %i.fas.fa-chevron-down.listing-select-wrapper__box--arrow-down
+
+                    
+                    -# .listing-form-box
+                    -#   .listing-product-detail__category
+                    -#     = f.label 'カテゴリー', class: 'listing-default__label'
+                    -#     %span.listing-default--require 必須
+                    -#     .listing-select-wrapper
+                    -#       .listing-select-wrapper__box
+                    -#         = f.select :category, @category_parent_array, {}, {class: 'listing-select-wrapper__box--select', id: 'parent_category'}
+                    -#         %i.fas.fa-chevron-down.listing-select-wrapper__box--arrow-down
+                    -# .select--wrap
+                      -# = f.fields_for :category do |i|
+                      -#   = i.select :category_name, [["トップス",1],["ジャケット/アウター",2],["パンツ",3]], {prompt: '---'}
+                      -# = f.fields_for :category do |i|
+                      -# = f.select :category_id, Item.y_categories.keys.to_a, {prompt: '---'}
+                      -# = f.select :category, @category_parent_array, {}, {class: 'listing-select-wrapper__box--select', id: 'parent_category'}
+                    -# .select--wrap
+                      -# = f.fields_for :category do |i|
+                      -#   = i.select :category_name, [["Tシャツ/カットソー(半袖/袖なし)",1],["Tシャツ/カットソー(7分/長袖)",2],["シャツ/ブラウス(半袖/袖なし)",3]] ,{prompt: '---'}
+                      -# = f.fields_for :category do |i|
+                      -# = f.select :category_id, Item.z_categories.keys.to_a, {prompt: '---'}
+                      -# = f.select :category, @category_parent_array, {}, {class: 'listing-select-wrapper__box--select', id: 'parent_category'}
                     %label
-                      カテゴリー
+                      サイズ
                       %span.form--require 必須
-                    %div
+
                       .select--wrap
-                      = f.fields_for :x_categori do |i|
-                        = i.select :x_category_name, [["レディース",1],["メンズ",2],["ベビー・キッズ",3],["インテリア・住まい・小物",4],["本・音楽・ゲーム",5],["おもちゃ・ホビー・グッズ",6],["コスメ・香水・美容",7],["家電・スマホ・カメラ",8],["スポーツ・レジャー",9],["ハンドメイド",10],["チケット",11],["自動車・オートバイ",12],["その他",13]],{prompt: '---'}
-                      .select--wrap
-                      = f.fields_for :y_categorys do |i|
-                        = i.select :y_category_name, [["トップス",1],["ジャケット/アウター",2],["パンツ",3]], {prompt: '---'}
-                      .select--wrap
-                      = f.fields_for :z_category_names do |i|
-                        = i.select :z_category_name, [["Tシャツ/カットソー(半袖/袖なし)",1],["Tシャツ/カットソー(7分/長袖)",2],["シャツ/ブラウス(半袖/袖なし)",3]] ,{prompt: '---'}
+                  
+                        -# = f.select :size, [["XXS以下",1],["XS(SS)",2],["S",3],["M",4],["L",5],["XL(LL)",6],["2XL(3L)",7],["3XL(4L)",8],["4XL(5L)以上",9],["FREE SIZE",10]] ,{prompt: '---'}
+                        = f.select :size, Item.sizes.keys.to_a, {prompt: '---'}
+
+                    %label
+                      ブランド
+                      %span.form--require 任意
+                      .select--wrap  
+                        -# = f.select :brand, [["Tシャツ/カットソー(半袖/袖なし)",1],["Tシャツ/カットソー(7分/長袖)",2],["シャツ/ブラウス(半袖/袖なし)",3]] ,{prompt: '---'}
+                        =f.text_field :brand, placeholder: "例)シャネル"
                   
                   .form__group
                     %label
                       商品の状態
                       %span.form--require 必須
-                    = f.select :condition,[["新品、未使用",1],["未使用に近い",2],["目立った傷や汚れなし",3],["やや傷や汚れあり",4],["傷や汚れあり",5],["全体的に状態が悪い",6]], {prompt: '---'}, {class: "select__default"}
+                    -# = f.select :condition,[["新品、未使用",1],["未使用に近い",2],["目立った傷や汚れなし",3],["やや傷や汚れあり",4],["傷や汚れあり",5],["全体的に状態が悪い",6]], {prompt: '---'}, {class: "select__default"}
+                    = f.select :condition, Item.conditions.keys.to_a, {prompt: '---'}, {class: "select__default"}
               .sell__content
                 %h3.sell--sub__head 配送について
                 = link_to '?', "/jp/help_center/article/68/",class: "form__question"
@@ -66,17 +123,22 @@
                     %label
                       配送料の負担
                       %span.form--require 必須
+                
                     -# = f.select :charges, [["送料込み(出品者負担)",1],["着払い(購入者負担)",2]], {prompt: '---'}, {class: "select__default"}
+                    = f.select :charges, Item.charges.keys.to_a, {prompt: '---'}, {class: "select__default"}
                   .form__group
                     %label
                       発送元の地域
                       %span.form--require 必須
-                    = f.collection_select :prefecture_id, Prefecture.all, :id, :name, {prompt: '---'}, {class: "select__default"}
+               
+                    = f.collection_select :prefectures, Prefecture.all, :id, :name, {prompt: '---'}, {class: "select__default"}
                   .form__group
                     %label
                       発送までの日数
                       %span.form--require 必須
+                 
                     -# = f.select :date, [["1~2日で発送",1],["2~3日で発送",2],["4~7日で発送",3]], {prompt: '---'}, {class: "select__default"}
+                    = f.select :date, Item.dates.keys.to_a, {prompt: '---'}, {class: "select__default"}
               .sell__content
                 %h3.sell--sub__head 販売価格(300〜9,999,999)
                 = link_to '?', "/jp/help_center/article/68/", class: "form__question"
@@ -135,3 +197,5 @@
     = link_to image_tag(src="logo_white.svg"),root_path
   .exhibition__footer-end
     © Mercari, Inc.
+
+
