--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -2,6 +2,7 @@
   width: 100vw;
   height: 100%;
   background-color: rgb(245, 245, 245);
+  padding-bottom: 50px;
   &__header {
     height: 40px;
     background-color: rgb(245, 245, 245);
@@ -94,15 +95,16 @@
             }
             &-name1 {
               display: flex;
+              padding-bottom: 10px;
               &-smile1 {
-                margin-top: 20px;
+                margin-top: 10px;
                 &-1 {
                   color: palevioletred;
                   font-size: 15px;   
                 }
               }
               &-smile2 {
-                margin-top: 20px;
+                margin-top: 10px;
                 margin-left: 20px;
                 &-1 {
                   color: orange;
@@ -110,7 +112,7 @@
                 }
               }
               &-smile3 {
-                margin-top: 20px;
+                margin-top: 10px;
                 margin-left: 20px;
                 &-1 {
                   color: lightblue;
@@ -121,6 +123,7 @@
             
           }
           &-box2 {
+            font-size: 14px;
             width: 183px;
             height: 73px;
             border: 1px solid #f5f5f5;
@@ -213,7 +216,7 @@
       }
       &-relief {
         font-size: 14px;
-        margin-left: 73px;
+        margin-left: 60px;
         a {
           text-decoration: none;
           color: #0099E8;
@@ -369,9 +372,6 @@
           &-price {
             font-size: 17px;
             font-weight: 600;
-          }
-          &-iine {
-            
           }
         }
       }
