一覧表示　購入機能　訂正

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -39,7 +39,7 @@
             .main__categories-box-area-image
               .main__categories-box-area-image-area
                 .main__categories-box-area-image-area-image
-                  = image_tag (item.images.first.image1.url)
+                  = image_tag(item.images.first.image.url)
                       
                   .main__categories-box-area-image-area-price
                     ¥
