--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -39,7 +39,8 @@
             .main__categories-box-area-image
               .main__categories-box-area-image-area
                 .main__categories-box-area-image-area-image
-                  = image_tag (item.images.first.image1.url)
+                  = image_tag(item.images.first.image.url)
+                
                       
                   .main__categories-box-area-image-area-price
                     ¥
@@ -193,7 +194,7 @@
       .main__Exhibition-image-text
         出品
       .main__Exhibition-image-logo
-        =link_to icon('fas', 'camera', class: "main__Exhibition-image-logo-camera"),new_item_path
+        =link_to icon('fas', 'camera', class: "main__Exhibition-image-logo-camera"),new_item_path,data: {"turbolinks" => false}
 
 = render "footer"
 
