--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -76,6 +76,18 @@
     .show__product-btn
       =link_to "購入画面に進む",root_path
 
+    .show__product-btn2
+      =link_to "商品の編集",root_path
+
+    .show__product-or
+      or
+    .show__product-btn3
+      =link_to "商品を一旦停止する",root_path
+
+    .show__product-btn4
+     
+      =link_to "この商品を削除する", root_path
+
     .show__product-text
       .show__product-text-1
         = @item.description
