--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -182,6 +182,60 @@
         color: #ffffff;
       }
     }
+    &-btn2 {
+      margin-top: 16px;
+      a {
+        width: 100%;
+        height: 60px;
+        background: #ea352d;
+        cursor: pointer;
+        font-weight: 600;
+        display: block;
+        font-size: 24px;
+        text-align: center;
+        text-decoration: none;
+        line-height: 60px;
+        color: #ffffff;
+      }
+    }
+    &-or {
+      text-align: center;
+      font-size: 30px;
+      line-height: 20px;
+      margin-top: 10px;
+    }
+    &-btn3 {
+      margin-top: 16px;
+      a {
+        width: 100%;
+        height: 60px;
+        background: gray;
+        cursor: pointer;
+        font-weight: 600;
+        display: block;
+        font-size: 24px;
+        text-align: center;
+        text-decoration: none;
+        line-height: 60px;
+        color: #ffffff;
+      }
+    }
+    &-btn4 {
+      margin-top: 16px;
+      a {
+        width: 100%;
+        height: 60px;
+        background: gray;
+        cursor: pointer;
+        font-weight: 600;
+        display: block;
+        font-size: 24px;
+        text-align: center;
+        text-decoration: none;
+        line-height: 60px;
+        color: #ffffff;
+      }
+    }
     &-text {
       padding-top: 32px;
       font-size: 18px; 
