--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -6,7 +6,7 @@
       = @item.item_name
     .show__product-box
       .show__product-box-area1
-        = image_tag (@item.images.first.image1.url class: "show__product-box-area-image-1")
+        = image_tag (@item.images.first.image.url class: "show__product-box-area-image-1")
         .show__product-box-area-image
          
       .show__product-box-area2
@@ -53,17 +53,17 @@
             = @item.condition
             -# 未使用に近い
           .show__product-box-area2-exhibition2-box3
-            -# = @item.charges
-            送料込み(出品者負担)
+            = @item.charges
+            -# 送料込み(出品者負担)
           .show__product-box-area2-exhibition2-box3
             -# = @item.shipping
             らくらくメルカリ便
           .show__product-box-area2-exhibition2-box3
-            -# = link_to @item.prefectures, root_path
-            = link_to "埼玉県",root_path
+            = @prefecture.name
+            -# = link_to "埼玉県",root_path
           .show__product-box-area2-exhibition2-box3
-            -# = @item.date 
-            1~2日で発送
+            = @item.date 
+            -# 1~2日で発送
     .show__product-price
       %span.show__product-price-1
         ¥
@@ -115,7 +115,7 @@
   .show__other
     .show__other-area
       .show__other-area-image
-        = link_to image_tag(src= @item.images.first.image1.url, class: "show__product-box-area-image-1"),root_path
+        = link_to image_tag(src= @item.images.first.image.url, class: "show__product-box-area-image-1"),root_path
       .show__other-area-text
         .show__other-area-text-information 
           = @item.description
@@ -128,7 +128,7 @@
    
     .show__other-area
       .show__other-area-image
-        = link_to image_tag(src= @item.images.first.image1.url, class: "show__product-box-area-image-1"),root_path
+        = link_to image_tag(src= @item.images.first.image.url, class: "show__product-box-area-image-1"),root_path
       .show__other-area-text
         .show__other-area-text-information
           = @item.description
@@ -141,7 +141,7 @@
    
     .show__other-area
       .show__other-area-image
-        = link_to image_tag(src= @item.images.first.image1.url, class: "show__product-box-area-image-1"),root_path
+        = link_to image_tag(src= @item.images.first.image.url, class: "show__product-box-area-image-1"),root_path
       .show__other-area-text
         .show__other-area-text-information
           = @item.description
@@ -154,7 +154,7 @@
    
     .show__other-area
       .show__other-area-image
-        = link_to image_tag(src= @item.images.first.image1.url, class: "show__product-box-area-image-1"),root_path
+        = link_to image_tag(src= @item.images.first.image.url, class: "show__product-box-area-image-1"),root_path
       .show__other-area-text
         .show__other-area-text-information
           = @item.description
@@ -167,7 +167,7 @@
    
     .show__other-area
       .show__other-area-image
-        = link_to image_tag(src= @item.images.first.image1.url, class: "show__product-box-area-image-1"),root_path
+        = link_to image_tag(src= @item.images.first.image.url, class: "show__product-box-area-image-1"),root_path
       .show__other-area-text
         .show__other-area-text-information
           = @item.description
