--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -1,3 +1,6 @@
+.pan
+  - breadcrumb :new
+  = breadcrumbs separator: " &rsaquo; "
 .exhibition
   .exhibition__header
     .exhibition__header-logo
