--- a/app/assets/stylesheets/_exhibition.scss
+++ b/app/assets/stylesheets/_exhibition.scss
@@ -1,3 +1,14 @@
+.pan {
+  margin-left: 205px;
+  a {
+    text-decoration: none;
+    color: gray;
+  }
+  a:hover {
+    opacity: 0.7;
+    text-decoration: underline;
+  }
+}
 .exhibition {
   background-color: rgb(245, 245, 245);
   width: 100vw;
