購入機能　機能実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
 @import "./exhibition";
 @import "./show";
 @import "./new1";
-@import "./buy";
+@import "./buy_view";
 @import "./sidebar";
 @import "./credit";
 @import "./logout";
