--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -74,7 +74,7 @@
         送料込み
 
     .show__product-btn
-      =link_to "購入画面に進む",root_path
+      =link_to "購入画面に進む","/items/buy_view"
 
     .show__product-text
       .show__product-text-1
