--- a/app/views/mercaris/credit.html.haml
+++ b/app/views/mercaris/credit.html.haml
@@ -1,4 +1,4 @@
-= render partial: "header"
+= render partial: "items/header"
 .main00
   = render partial: "sidebar"
   .main00-credit
@@ -21,4 +21,4 @@
         =link_to icon('fas', 'camera', class: "main__Exhibition-image-logo-camera"),root_path
 
 .space
-= render partial: "footer"
+= render partial: "items/footer"
