--- a/app/views/mercaris/logout.html.haml
+++ b/app/views/mercaris/logout.html.haml
@@ -1,4 +1,4 @@
-= render partial: "header"
+= render partial: "items/header"
 .main-logout
   = render partial: "sidebar"
   .main-logout-content
@@ -12,4 +12,4 @@
         出品
       .main-logout__Exhibition-image-logo
         =link_to icon('fas', 'camera', class: "main__Exhibition-image-logo-camera"),root_path
-= render partial: "footer"
+= render partial: "items/footer"
