--- a/app/views/mercaris/register_user_data.html.haml
+++ b/app/views/mercaris/register_user_data.html.haml
@@ -1,4 +1,4 @@
-= render partial: "header"
+= render partial: "items/header"
 .main_register
   = render partial: "sidebar"
   .main_register-data
@@ -70,4 +70,4 @@
           =f.submit "登録する", class: "new1-btn"
         .main_register-data-about
           =link_to "本人情報登録について","https://www.mercari.com/jp/help_center/article/423/"
-= render partial: "footer"
+= render partial: "items/footer"
