--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,7 +1,7 @@
 = render "header"
 .pan
-  - breadcrumb :show
-  = breadcrumbs separator: " &rsaquo; "
+  -# - breadcrumb :show
+  -# = breadcrumbs separator: " &rsaquo; "
 .show
   .show__header
   .show__product
