--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,5 @@
 @import "./sidebar";
 @import "./credit";
 @import "./logout";
-@import "./register_user_data"
+@import "./register_user_data";
+@import "./mypage";
