--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,5 +1,6 @@
 = render "header"
 .pan
+  -# エラーが出てしまったので、購入機能実装後また直します。
   -# - breadcrumb :show
   -# = breadcrumbs separator: " &rsaquo; "
 .show
