ユーザープロフィール編集ページフロント実装

--- a/app/views/items/mypage.html.haml
+++ b/app/views/items/mypage.html.haml
@@ -6,7 +6,7 @@
       .mypage__box
         = image_tag(src="yama.jpg")
         .mypage__box-link
-          = image_tag(src="neko.jpg")
+          = image_tag(src="neko.jpg", class: "image2")
         .mypage__box-name
           名前
         .mypage__box-evaluation
