パンクズ機能

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,8 +1,8 @@
 = render "header"
 .pan
   -# エラーが出てしまったので、購入機能実装後また直します。
-  -# - breadcrumb :show
-  -# = breadcrumbs separator: " &rsaquo; "
+  - breadcrumb :show
+  = breadcrumbs separator: " &rsaquo; "
 .show
   .show__header
   .show__product
