--- a/app/assets/stylesheets/_new1.scss
+++ b/app/assets/stylesheets/_new1.scss
@@ -209,6 +209,7 @@
           }
 
           &-attention{
+            margin-top: 100px;
             width: 300px;
             font-size: 13px;
             color:  #888;
