--- a/app/views/signup/_header.html.haml
+++ b/app/views/signup/_header.html.haml
@@ -22,7 +22,14 @@
           .header__box__lower-box__left-box__brand__text
             ブランドから探す
       %ul.header__box__lower-box__right-box
-        %li
-          = link_to "新規会員登録", new_mercari_path, class: "header__box__lower-box__right-box__btn new"
-        %li
-          = link_to "ログイン", root_path, class:"header__box__lower-box__right-box__btn login"
+        - if user_signed_in?
+          =link_to current_user.nickname, root_path
+
+          %li
+            = link_to "ログアウト", destroy_user_session_path, method: :delete, class:"header__box__lower-box__right-box__btn__logout"
+
+        - else
+          %li
+            = link_to "新規会員登録", new_signup_path, class: "header__box__lower-box__right-box__btn__new"
+          %li
+            = link_to "ログイン", new_user_registration_path, class:"header__box__lower-box__right-box__btn__login"
