--- a/app/views/signup/new.html.haml
+++ b/app/views/signup/new.html.haml
@@ -8,7 +8,7 @@
     .new__main-mail
       メールアドレスで登録する
       .new__main-mail-logo
-        = link_to root_path do
+        = link_to new1_signup_index_path do
           = icon('fas', 'envelope', class: "new__main-mail-logo-1")
     .new__main-facebook
       Facebookで登録する
