--- a/app/views/signup/new1.html.haml
+++ b/app/views/signup/new1.html.haml
@@ -25,7 +25,7 @@
             .new1_body_mainspace_content-nickname-1-hissu
               必須
           .new1_body_mainspace_content-nickname-field
-            =form_with do |f|
+            =form_with model: @user, url:new2_signup_index_path, local: true do |f|
               =f.text_field :nickname, placeholder: "例)メルカリ太郎", size: "60", class: "content-field"
               .new1_body_mainspace_content-mail
                 .new1_body_mainspace_content-mail-1
@@ -34,7 +34,7 @@
                   .new1_body_mainspace_content-mail-1-hissu
                     必須
                 .new1_body_mainspace_content-mail-field
-              =f.text_field :nickname, placeholder: "PC・携帯どちらでも可", size: "60",class: "content-field"
+              =f.email_field :email, placeholder: "PC・携帯どちらでも可", size: "60",class: "content-field"
               .new1_body_mainspace_content-pass
                 .new1_body_mainspace_content-pass-1
                   .new1_body_mainspace_content-pass-1-title
@@ -42,7 +42,7 @@
                   .new1_body_mainspace_content-pass-1-hissu
                     必須
                 .new1_body_mainspace_content-pass-field
-              =f.text_field :nickname, placeholder: "7文字以上の半角英数字", size: "60"
+              =f.password_field :password, placeholder: "7文字以上の半角英数字", size: "60"
               .new1_body_mainspace_content-pass-message
                 .new1_body_mainspace_content-pass-message-checkbox
                   =check_box_tag :check1
@@ -61,8 +61,8 @@
                     必須
               .new1_body_mainspace_content-name-field
                 .new1_body_mainspace_content-name-field-1
-              =f.text_field :nickname, placeholder: "例)山田"
-              =f.text_field :nickname, placeholder: "例)綾"
+              =f.text_field :last_name, placeholder: "例)山田"
+              =f.text_field :first_name, placeholder: "例)綾"
               .new1_body_mainspace_content-kananame
                 .new1_body_mainspace_content-kananame-1
                   .new1_body_mainspace_content-kananame-1-title
@@ -71,8 +71,8 @@
                     必須
                 .new1_body_mainspace_content-kananame-field
                   .new1_body_mainspace_content-kananame-field-1
-              =f.text_field :nickname, placeholder: "例)ヤマダ"
-              =f.text_field :nickname, placeholder: "例)アヤ"
+              =f.text_field :kana_last_name, placeholder: "例)ヤマダ"
+              =f.text_field :kana_first_name, placeholder: "例)アヤ"
               .new1_body_mainspace_content-birth
                 .new1_body_mainspace_content-birth-1
                   .new1_body_mainspace_content-birth-1-title
@@ -81,7 +81,10 @@
                     必須
                 .new1_body_mainspace_content-birth-field
                   .new1_body_mainspace_content-birth-field-year
-              != sprintf(f.date_select(:birthday, prefix:'birthday',with_css_classes:'XXXXX', prompt:"--",use_month_numbers:true, start_year:Time.now.year, end_year:1900, date_separator:'%s'),'年','月')+'日'
+                    = f.select :birth_year, 1930..2020, {prompt: "--"}, value: ""
+                    = f.select :birth_month, 1..12, {prompt: "--"}
+                    = f.select :birth_day, 1..31, {prompt: "--"}
+              -# != sprintf(f.date_select(:birth_day, prefix:'birthday',with_css_classes:'XXXXX', prompt:"--",use_month_numbers:true, start_year:Time.now.year, end_year:1900, date_separator:'%s'),'年','月')+'日'
               .new1_body_mainspace_content-attention
                 ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
               .new1_body_mainspace_content-riyoukiyaku
