--- a/app/views/signup/new5.html.haml
+++ b/app/views/signup/new5.html.haml
@@ -24,8 +24,7 @@
         ありがとうございました。
         会員登録完了しました。
       .new5__form-box-form
-        =form_with do |f|  
-          =f.submit "メルカリをはじめる", class: "new5__form-box-form-b"
+        = link_to "メルカリをはじめる", root_path, class: "new5__form-box-form-b"
 
   .new5__footer1
   .new5__footer1-upper
