コメントアウト消去

--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -135,7 +135,7 @@
                       発送元の地域
                       %span.form--require 必須
                
-                    = f.collection_select :prefectures, Prefecture.all, :id, :name, {prompt: '---'}, {class: "select__default"}
+                    -# = f.collection_select :prefectures, Prefecture.all, :id, :name, {prompt: '---'}, {class: "select__default"}
                   .form__group
                     %label
                       発送までの日数
