--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -33,4 +33,4 @@
           %li
             = link_to "新規会員登録", new_signup_path, class: "header__box__lower-box__right-box__btn__new"
           %li
-            = link_to "ログイン", new_user_registration_path, class:"header__box__lower-box__right-box__btn__login"
+            = link_to "ログイン", new_user_session_path, class:"header__box__lower-box__right-box__btn__login"
