--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -60,7 +60,7 @@
           .show__product-box-area2-exhibition2-box3
             らくらくメルカリ便
           .show__product-box-area2-exhibition2-box3
-            -# = @prefecture.name
+            = @prefecture.name
           .show__product-box-area2-exhibition2-box3
             = @item.date 
     .show__product-price
