--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -167,7 +167,9 @@
       }
     }
     &-btn {
-      margin-top: 16px;
+      padding-top: 16px;
+      width: 400px;
+      margin: 0 auto;
       a {
         width: 100%;
         height: 60px;
@@ -183,7 +185,9 @@
       }
     }
     &-btn2 {
-      margin-top: 16px;
+      padding-top: 16px;
+      width: 400px;
+      margin: 0 auto;
       a {
         width: 100%;
         height: 60px;
@@ -205,7 +209,9 @@
       margin-top: 10px;
     }
     &-btn3 {
-      margin-top: 16px;
+      padding-top: 16px;
+      width: 400px;
+      margin: 0 auto;
       a {
         width: 100%;
         height: 60px;
@@ -221,7 +227,9 @@
       }
     }
     &-btn4 {
-      margin-top: 16px;
+      padding-top: 16px;
+      width: 400px;
+      margin: 0 auto;
       a {
         width: 100%;
         height: 60px;
@@ -247,7 +255,7 @@
     }
     &-iine {
       margin-top: 16px;
-      margin-bottom: 10px;
+      padding-bottom: 50px;
       &-1 {
         background: #f5f5f5;
         border-radius: 40px;
@@ -432,3 +440,11 @@
     }
   }
 }
+
+.show-2{
+  width: 700px;
+  background-color: white;
+  margin: 0 auto;
+  padding-bottom: 30px;
+}
+
