--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -195,7 +195,7 @@
       .main__Exhibition-image-text
         出品
       .main__Exhibition-image-logo
-        =link_to icon('fas', 'camera', class: "main__Exhibition-image-logo-camera"),new_item_path,data: {"turbolinks" => false}
+        =link_to icon('fas', 'camera', class: "main__Exhibition-image-logo-camera"),new_item_path,data: { turbolinks: false}
 - else
   .main__Exhibition_not
 
